finalização da validação

--- a/ValidaForm - nomeCompleto/index.html
+++ b/ValidaForm - nomeCompleto/index.html
@@ -26,6 +26,6 @@
             O montante de: <b>1000</b> foi enviado para o clinte: <b>nome do cliente</b> - conta: <b>1</b>
         </p>
     </div>
-    <script src="main0.js"></script>
+    <script src="mainT.js"></script>
 </body>
 </html>
