--- a/Projetos -Dev. Full/02 Projeto - Calculadora de Médias/index.HTML
+++ b/Projetos -Dev. Full/02 Projeto - Calculadora de Médias/index.HTML
@@ -16,7 +16,7 @@
         </header>
         <form id="form-atividade">
             <input type="text" id="nomeAtividade" required placeholder="Nome da Atividade">
-            <input type="number" id="notaAtvidade" required placeholder="Nota da Atividade" min="0" max="10">
+            <input type="number" id="notaAtividade" required placeholder="Nota da Atividade" min="0" max="10">
             <button type="submit">Adicionar +</button>
         </form>
         <table cellspacing="0"> <!--Remove separador das celulas da tabela-->
@@ -44,6 +44,6 @@
             </tfoot>
         </table>
     </div> 
-    <script src="main.js"></script>   
+    <script src="treino.js"></script>   
 </body>
 </html>
