Limpa no diretorio

--- a/Projetos -Dev. Full/05 Projeto - jQuery - Galeria de Fotos/index.html
+++ b/Projetos -Dev. Full/05 Projeto - jQuery - Galeria de Fotos/index.html
@@ -50,6 +50,6 @@
         </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-    <script src="main.js"></script>
+    <script src="mainT.js"></script>
 </body>
 </html>
