--- a/Projetos -Dev. Full/02 Projeto - Calculadora de Médias/index.HTML
+++ b/Projetos -Dev. Full/02 Projeto - Calculadora de Médias/index.HTML
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="/img/logo.png" alt="capelo e diploma">
+            <img src="./img/logo.png" alt="capelo e diploma">
             <h1>Calculadora de Médias</h1>
         </header>
         <form id="form-atividade">
