--- a/Projetos -Dev. Full/10 Exercicio - Loja_Responsiva/index.html
+++ b/Projetos -Dev. Full/10 Exercicio - Loja_Responsiva/index.html
@@ -122,6 +122,48 @@
                     <a href="#">Saber Mais</a>
                 </div>
                 <div class="product">
+                    <div class="caixa-img">
+                        <img src="https://imgs.casasbahia.com.br/1502118820/1xg.jpg?imwidth=500" alt="">
+                        <img src="https://static.obabox.com.br/img/27688/norm_0_obavintage-plus-vitrola.jpg" alt="">
+                        <img src="https://cdn.leroymerlin.com.br/products/vitrola_raveo_spazio_toca_disco_de_vinil_cd_k7_com_bt_retro_1567453800_9eee_600x600.jpg"
+                            alt="">
+                    </div>
+                    <h2>Vitrola Spazio com Toca-discos de 3 velocidades</h2>
+                    <div class="valores">
+                        <span class="oferta">R$1.500,00</span>
+                        <span class="preco">R$1.200,00</span>
+                    </div>
+
+                    <div class="botao">
+                        <button>ADICIONAR AO CARRINHO</button>
+                    </div>
+
+                    <p>Rádio FM, CD e Cassete players, USB e SD (reproduzem e gravam), entrada e saída auxiliares
+                        econexão Bluetooth.</p>
+                    <a href="#">Saber Mais</a>
+                </div>
+                <div class="product">
+                    <div class="caixa-img">
+                        <img src="https://imgs.casasbahia.com.br/1502118820/1xg.jpg?imwidth=500" alt="">
+                        <img src="https://static.obabox.com.br/img/27688/norm_0_obavintage-plus-vitrola.jpg" alt="">
+                        <img src="https://cdn.leroymerlin.com.br/products/vitrola_raveo_spazio_toca_disco_de_vinil_cd_k7_com_bt_retro_1567453800_9eee_600x600.jpg"
+                            alt="">
+                    </div>
+                    <h2>Vitrola Spazio com Toca-discos de 3 velocidades</h2>
+                    <div class="valores">
+                        <span class="oferta">R$1.500,00</span>
+                        <span class="preco">R$1.200,00</span>
+                    </div>
+
+                    <div class="botao">
+                        <button>ADICIONAR AO CARRINHO</button>
+                    </div>
+
+                    <p>Rádio FM, CD e Cassete players, USB e SD (reproduzem e gravam), entrada e saída auxiliares
+                        econexão Bluetooth.</p>
+                    <a href="#">Saber Mais</a>
+                </div>
+                <div class="product">
 
                     <div class="caixa-img">
                         <img src="https://imgs.casasbahia.com.br/1502118820/1xg.jpg?imwidth=500" alt="">
