Adicionado id nos input

--- a/Projetos -Dev. Full/11.1 Exercicio Bootstrap/index.html
+++ b/Projetos -Dev. Full/11.1 Exercicio Bootstrap/index.html
@@ -14,11 +14,11 @@
                 <h2>Entre em Contato</h2>
                 <form action="">
                     <label class="form-label" for="nome">Nome</label>
-                    <input class="form-control" type="text">
+                    <input class="form-control" type="text" id="nome">
                     <label class="form-label" for="email">Email</label>
-                    <input class="form-control" type="email">
+                    <input class="form-control" type="email" id="email">
                     <label class="form-label" for="fone">Telefone</label>
-                    <input class="form-control" type="tel">
+                    <input class="form-control" type="tel" id="fone">
                     <button class="btn btn-success" type="submit">Enviar</button>
                     <div class="form-check">
                         <label class="form-label" for="">Li e concordo com os termos</label>
