--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                     <td><button class="botao" onclick="insert('1')">1</button></td>
                     <td><button class="botao" onclick="insert('2')">2</button></td>
                     <td><button class="botao" onclick="insert('3')">3</button></td>
-                    <td rowspan="2"><button class="botao btn_row" onclick="calcular('')">=</button></td>
+                    <td rowspan="2"><button class="botao btn_row altura" onclick="calcular('')">=</button></td>
                 </tr>
                 <tr>
                     <td colspan="2"><button class="botao btn_col" onclick="insert('0')">0</button></td>
