--- a/19.1 Exercicio e-mail HTML/index.html
+++ b/19.1 Exercicio e-mail HTML/index.html
@@ -92,6 +92,22 @@
                         </div>                 
                     </td>                    
                 </tr>
+                <tr>
+                    <td  colspan="2" style="padding-top: 50px; padding-bottom: 10px;">
+                        <center>
+                            <a style="text-decoration: none;" href="#">
+                                <img src="https://servidor-estaticos-pink-two.vercel.app/facebook (1) 1.png" alt="">
+                            </a>
+                            <a style="text-decoration: none;" href="#">
+                                <img src="https://servidor-estaticos-pink-two.vercel.app/instagram 1.png" alt="">
+                            </a>
+                            <a style="text-decoration: none;" href="#">
+                                <img src="https://servidor-estaticos-pink-two.vercel.app/twitter 1.png" alt="">
+                            </a>
+                            
+                        </center>
+                    </td>
+                </tr>
             </tbody>
             <tfoot>
                 <tr bgcolor="orange">
